# sadko-dostavka

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
nginx/conf.d/: nginx.conf
sadko/: manage.py
sadko/menu/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
sadko/menu/migrations/: 0001_initial.py  0002_dish_weight_alter_dish_price.py
sadko/sadko/: asgi.py  settings.py  urls.py  wsgi.py
